# tardir

./: .gitignore  README.md  pyproject.toml
tardir/: cli.py
